GTK+-3.20 high contrast: fix directory of panel-grid.svg

--- a/desktop-themes/ContrastHigh/gtk-3.0/mate-applications.css
+++ b/desktop-themes/ContrastHigh/gtk-3.0/mate-applications.css
@@ -119,7 +119,7 @@ PanelSeparator {
 
 /* the grid left from wnckpager and wncktasklist */
 MatePanelAppletFrameDBus {
-    background-image: -gtk-scaled(url("assets/panel-grid.svg"));
+    background-image: -gtk-scaled(url("panel-grid.svg"));
     background-color: transparent;
     background-repeat: no-repeat;
     background-position: left;
